backport Mozilla/rhino@edbd08098: Replace 'new Integer/Double/Long' by Integer/Double/Long.valueOf